Update repository references and enhance installation instructions
- Changed all occurrences of the repository URL from 'adonis' to 'Adonis0123' in install.sh, README.md, and pyproject.toml for consistency.
- Updated README.md to reflect the new version number in installation instructions.
- Added a GitHub Actions workflow for automated release management in release.yml.
- Enhanced release.sh to check for a clean worktree before proceeding with releases and to detect the presence of a release workflow.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,11 +47,11 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/adonis/weekly-flow"
-Repository = "https://github.com/adonis/weekly-flow"
-Issues = "https://github.com/adonis/weekly-flow/issues"
-Documentation = "https://github.com/adonis/weekly-flow/blob/main/README.md"
-Changelog = "https://github.com/adonis/weekly-flow/blob/main/CHANGELOG.md"
+Homepage = "https://github.com/Adonis0123/weekly-flow"
+Repository = "https://github.com/Adonis0123/weekly-flow"
+Issues = "https://github.com/Adonis0123/weekly-flow/issues"
+Documentation = "https://github.com/Adonis0123/weekly-flow/blob/main/README.md"
+Changelog = "https://github.com/Adonis0123/weekly-flow/blob/main/CHANGELOG.md"
 
 [tool.setuptools.packages.find]
 where = ["."]
